[gd_scene load_steps=5 format=3 uid="uid://b665yx84t0yaj"]

[ext_resource type="Script" path="res://Scenes/ground.gd" id="1_s8uwq"]
[ext_resource type="Texture2D" uid="uid://cet4cekw32tsa" path="res://Assets/base.png" id="2_gyikj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n8pxh"]
size = Vector2(336, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4wisj"]
size = Vector2(336, 13)

[node name="Ground" type="Node2D"]
script = ExtResource("1_s8uwq")

[node name="Ground1" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Ground1"]
texture_filter = 1
texture = ExtResource("2_gyikj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground1"]
position = Vector2(0, -49.5)
shape = SubResource("RectangleShape2D_n8pxh")

[node name="Ground2" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Ground2"]
texture_filter = 1
position = Vector2(336, 0)
texture = ExtResource("2_gyikj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground2"]
position = Vector2(336, -49.5)
shape = SubResource("RectangleShape2D_4wisj")

[connection signal="body_entered" from="Ground1" to="." method="_on_body_entered"]
[connection signal="body_entered" from="Ground2" to="." method="_on_body_entered"]
